--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 
-  "homepage": "http://Sedrak1992.github.io/SomeCompany",
+  "homepage": "http://Sedrak1992.github.io/SomeCompany.gi",
   "name": "somecompany",
   "version": "0.1.0",
   "private": true,
